# unity-2d-for-xmonad

./: .bzrignore  .gitignore  Application.qml  CMakeLists.txt  CODING  HACKING.txt  Launcher.qml  README  README.md  TODO  all.pro  cmake_uninstall.cmake  cmake_uninstall.cmake.in  config.h.in  qmldir  unity-qt-launcher.desktop  unity_qt.qml
launcher/: Application.qml  AutoScrollingListView.qml  CMakeLists.txt  Launcher.qml  LauncherItem.qml  LauncherList.qml  ListViewDragAndDrop.qml  launcher.cpp  launcher.pro  launchermenu.css  launcherview.cpp  launcherview.h  unity-qt-launcher.desktop
launcher/UnityApplications/: CMakeLists.txt  device.cpp  device.h  deviceslist.cpp  deviceslist.h  iconimageprovider.cpp  iconimageprovider.h  launcherapplication.cpp  launcherapplication.h  launcherapplicationslist.cpp  launcherapplicationslist.h  launcherapplicationslistdbus.cpp  launcherdevice.cpp  launcherdevice.h  launcherdeviceslist.cpp  launcherdeviceslist.h  launcheritem.cpp  launcheritem.h  launchermenu.cpp  launchermenu.h  launchermodel.cpp  launchermodel.h  launcherplaceslist.cpp  launcherplaceslist.h  launchertooltip.h  launcherutility.cpp  launcherutility.h  listaggregatormodel.cpp  listaggregatormodel.h  place.cpp  place.h  placeentry.cpp  placeentry.h  plugin.cpp  plugin.h  qmldir  trash.cpp  trash.h  webfavorite.cpp  webfavorite.h  (+12 more)
launcher/app/: CMakeLists.txt  abstracthidebehavior.cpp  abstracthidebehavior.h  abstractvisibilitybehavior.cpp  abstractvisibilitybehavior.h  autohidebehavior.cpp  autohidebehavior.h  autohidecontroller.cpp  autohidecontroller.h  edgehitdetector.cpp  edgemousearea.cpp  edgemousearea.h  forcevisiblebehavior.cpp  forcevisiblebehavior.h  gesturehandler.cpp  gesturehandler.h  hidemodecontroller.cpp  hidemodecontroller.h  intellihidebehavior.cpp  intellihidebehavior.h  intellihidecontroller.cpp  intellihidecontroller.h  launcher.cpp  launcher.xml  launchercontrol.cpp  launchercontrol.h  launcherdbus.cpp  launcherdbus.h  launcherview.cpp  launcherview.h  qdeclarativepixmapcache_p.h  unity-2d-launcher.desktop  unity-2d-launcher.service.in  unity-qt-launcher.desktop  unity-qt-launcher.service.in  visibilitycontroller.cpp  visibilitycontroller.h
launcher/tests/: CMakeLists.txt  launchermenutest.cpp  launcherviewtest.cpp
libunity-2d-private/: CMakeLists.txt
libunity-2d-private/Unity2d/: AbstractScrollbar.qml  BaseBehavior.qml  CMakeLists.txt  GnomeBackground.qml  VisibilityController.qml  bfb.cpp  bfb.h  blendedimageprovider.cpp  blendedimageprovider.h  cacheeffect.h  dragdropevent.cpp  dragitem.cpp  dragitem.h  dragitemwithurl.cpp  dragitemwithurl.h  droparea.cpp  dropitem.cpp  dropitem.h  iconimageprovider.cpp  iconutilities.cpp  iconutilities.h  launcherapplication.cpp  launcherapplicationslist.cpp  launcherapplicationslist.h  launcherdevice.cpp  launcherdropitem.cpp  launcherdropitem.h  launcheritem.cpp  launchermenu.cpp  launcherplaceslist.cpp  listaggregatormodel.cpp  listaggregatormodel.h  mimedata.cpp  place.cpp  placeentry.cpp  placeentry.h  plugin.cpp  plugin.h  qmldir  qsortfilterproxymodelqml.cpp  (+13 more)
libunity-2d-private/src/: CMakeLists.txt  abstractdbusservicemonitor.cpp  abstractdbusservicemonitor.h  abstractvisibilitybehavior.cpp  abstractvisibilitybehavior.h  appletproviderinterface.h  application.cpp  application.h  applicationslist.cpp  applicationslist.h  applicationslistdbus.cpp  applicationslistdbus.h  applicationslistmanager.cpp  applicationslistmanager.h  autohidebehavior.cpp  autohidebehavior.h  bfb.cpp  bfb.h  blendedimageprovider.cpp  cairoutils.cpp  checkoptionfilter.h  colorizeeffect.cpp  colorizeeffect.h  cursorshapearea.cpp  cursorshapearea.h  dashclient.cpp  dashclient.h  dashsettings.cpp  dashsettings.h  debug.cpp  debug_p.h  decayedvalue.cpp  decayedvalue.h  desktopinfo.cpp  desktopinfo.h  dragdropevent.cpp  dragdropevent.h  dragitem.cpp  dragitemwithurl.cpp  dragitemwithurl.h  (+165 more)
libunity-2d-private/tests/: CMakeLists.txt  colorizeeffecttest.cpp  config-test.h.in  excludesortfilterproxymodeltest.cpp  focuspathtest.cpp  focuspathtest.qml  fr.po  gconnectortest.cpp  gettexttest.cpp  gimageutilstest.cpp  gkeysequenceparser.cpp  gnomesessionclienttest.sh.in  gnomesessionclienttesthelper.cpp  gnomesessionclienttesthelper.desktop.in  hotkeytest.cpp  imageutilitiestest.cpp  keyboardmodifiersmonitortest.cpp  keymonitortest.cpp  launchermenutest.cpp  listaggregatormodeltest.cpp  mouseareademo.cpp  paneltest.cpp  pointerbarriertest.cpp  qsortfilterproxymodeltest.cpp  unity2dtrtest.cpp  unity2dtrtest.sh.in
libunity-2d/Unity2d/: CMakeLists.txt  blendedimageprovider.cpp  cacheeffect.cpp  droparea.h  plugin.cpp  qmldir  qsortfilterproxymodelqml.cpp  qsortfilterproxymodelqml.h  screeninfo.cpp  screeninfo.h  signalwaiter.cpp  signalwaiter.h  windowimageprovider.cpp  windowinfo.cpp  windowinfo.h  windowslist.cpp  windowslist.h  workspacesinfo.cpp  workspacesinfo.h
libunity-2d/qml/: CMakeLists.txt  qmldir  windowinfo.h
libunity-2d/src/: CMakeLists.txt  debug_p.h  gnomesessionclient.cpp  gnomesessionclient.h  unity2dapplication.h  unity2dpanel.cpp  unity2dpanel.h
libunity-2d/tests/: CMakeLists.txt  keyboardmodifiersmonitortest.cpp
panel/: CMakeLists.txt
panel/app/: CMakeLists.txt  main.cpp  panelmanager.cpp  panelmanager.h  panelsmanager.cpp  panelsmanager.h  unity-2d-panel.desktop  unity-qt-panel.desktop  unity2dstyle.cpp  unity2dstyle.h
panel/applets/: CMakeLists.txt  indicator-config.h.in
panel/debian/: changelog  control  copyright
panel/lib/: CMakeLists.txt  applet.cpp  applet.h  appletcontainer.cpp  appletcontainer.h  debug_p.h  keyboardmodifiersmonitor.cpp  keyboardmodifiersmonitor.h  panel.cpp  (+8 more)
po/: CMakeLists.txt  README  af.po  am.po  an.po  ar.po  ast.po  az.po  be.po  bem.po  bg.po  bn.po  bo.po  br.po  bs.po  ca.po  ca@valencia.po  crh.po  cs.po  cy.po  da.po  de.po  el.po  en_AU.po  en_CA.po  en_GB.po  eo.po  es.po  et.po  eu.po  fa.po  fi.po  fil.po  fo.po  fr.po  fy.po  ga.po  gd.po  gl.po  gv.po  (+76 more)
shell/: CMakeLists.txt  DashLoader.qml  HudLoader.qml  MERGE-TODO  Shell.qml  WallpaperColor.qml  places.qmlproject
(+589 files in other folders)
